Fixed header overlap issue

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     width: 100%;
     height: 500px;
 	display: flex;
+	z-index: 1000;
 }
 .welcomeImg{
     height: 500px;
